@@ -1,3 +1,6 @@
 ::ng-deep .ant-card {
   transition: none;
 }
+.min-width {
+  min-width: 300px;
+}
