@@ -59,10 +59,10 @@
     <app-sub-table [positiveOnly]="true" [unit]="unit"></app-sub-table>
   </div>
   <nz-collapse *ngIf="expandable">
-    <nz-collapse-panel nzHeader="General bonus">
+    <nz-collapse-panel nzHeader="General bonus - Yielded and consumed">
       <app-sub-table [positiveOnly]="false" [unit]="unit"></app-sub-table>
     </nz-collapse-panel>
-    <nz-collapse-panel nzHeader="Efficiency bonus">
+    <nz-collapse-panel nzHeader="Efficiency bonus - Yielded only">
       <app-sub-table [positiveOnly]="true" [unit]="unit"></app-sub-table>
     </nz-collapse-panel>
   </nz-collapse>
